# cpp-dev-container-demo

./: CMakeLists.txt  Dockerfile
.devcontainer/: devcontainer.json
src/: main.cpp
