cmake_minimum_required (VERSION 2.8.11)
project (Example)

FIND_PACKAGE(Eigen3 REQUIRED)
FIND_PACKAGE(OpenMP REQUIRED)
FIND_PACKAGE(BLAS REQUIRED)
FIND_PACKAGE(Ceres REQUIRED)

INCLUDE_DIRECTORIES(${CERES_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})

FILE(GLOB SOURCES "src/*.cpp")

ADD_EXECUTABLE(example ${SOURCES})

TARGET_LINK_LIBRARIES(example ${CERES_LIBRARIES})